# Racjin-de-compression

./: .gitignore  CMakeLists.txt  README.md  Racjin (de)compression.sln
Racjin (de)compression/: Decode.cpp  Encode.cpp  Racjin (de)compression.cpp  Racjin (de)compression.vcxproj  Racjin (de)compression.vcxproj.filters  Racjin.h
include/racjin/: racjin.hpp
src/: decode.cpp  encode.cpp  main.cpp
